--- a/assets/scss/base/_typography.scss
+++ b/assets/scss/base/_typography.scss
@@ -21,18 +21,22 @@ h6 {
 
 h1 {
   font-size: rem(30);
+  color: #D8342D;
 }
 
 h2 {
   font-size: rem(26);
+  color: #D8342D;
 }
 
 h3 {
   font-size: rem(24);
+  color: #D8342D;
 }
 
 h4 {
   font-size: rem(20);
+  color: #D8342D;
 }
 
 h5,
